--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,12 @@ body::before {
 }
 
 a {
-  color: #ff0000;
+  color: #07580b;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ff3333;
+  color: #05a308;
   text-decoration: none;
 }
 
@@ -66,7 +66,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ff0000;
+  background: #07580b;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -80,7 +80,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #ff2929;
+  background: #05a308;
   color: #fff;
 }
 
@@ -123,7 +123,7 @@ h6 {
   width: 100px;
   padding: 15px 0;
   background: rgba(255, 255, 255, 0.12);
-  border-top: 5px solid #ff0000;
+  border-top: 5px solid #07580b;
 }
 
 #header .countdown div h3 {
@@ -192,19 +192,19 @@ h6 {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ff0000;
+  background: #07580b;
   color: #fff;
   transition: 0.3s;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 #header .subscribe .subscribe-form input[type=submit]:hover {
-  background: #f50000;
+  background: #05a308;
 }
 
 #header .subscribe .error-message {
   display: none;
-  color: #ed3c0d;
+  color: #07580b;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -324,7 +324,7 @@ section {
   top: 12px;
   position: absolute;
   font-size: 20px;
-  color: #ff0000;
+  color: #07580b;
 }
 
 .about .content p:last-child {
@@ -390,14 +390,14 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #ff0000;
+  background: #07580b;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #ff0000;
+  background: #07580b;
   color: #fff;
 }
 
@@ -414,7 +414,7 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: red;
+  color: #07580b;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -423,7 +423,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #05a308;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -486,7 +486,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #ff0000;
+  background: #07580b;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -494,7 +494,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #ff3333;
+  background: #05a308;
 }
 
 @keyframes animate-loading {
@@ -530,5 +530,5 @@ section {
 }
 
 #footer .credits a {
-  color: #ff3333;
+  color: #05a308;
 }
